--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -28,12 +28,11 @@ There are times when you are testing a page (or numerous pages) and you want to 
 A great way to handle this is by checking the HTTP Status Code that the browser received. However this functionality
 is not available in Selenium WebDriver.
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={contentLanguages} />
+<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
