--- a/frontend/tips/24-rest-apis/main.mdx
+++ b/frontend/tips/24-rest-apis/main.mdx
@@ -52,10 +52,9 @@ support for calling into REST APIs to virtually any test suite.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"24-rest-apis"} languages={contentLanguages} />
+<DisplayTips contentPath={"24-rest-apis"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
