--- a/frontend/tips/50-how-to-work-with-hovers/main.mdx
+++ b/frontend/tips/50-how-to-work-with-hovers/main.mdx
@@ -34,16 +34,15 @@ By leveraging Selenium's [Action Builder](http://seleniumhq.github.io/selenium/d
 done by telling Selenium which element we want to move the mouse to, and then performing what we need to after.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"50-how-to-work-with-hovers"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"50-how-to-work-with-hovers"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
