--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -31,12 +31,11 @@ By accessing what we want through the [WebDriver Wire Protocol](https://code.goo
 agnostic way that also gets us the information in real time.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"54-logging"} languages={contentLanguages} />
+<DisplayTips contentPath={"54-logging"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
