--- a/frontend/tips/1-how-to-upload-a-file/main.mdx
+++ b/frontend/tips/1-how-to-upload-a-file/main.mdx
@@ -39,16 +39,15 @@ insert the full path of the file we want to upload (as text) into the form and t
 Let's step through an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
