--- a/frontend/tips/10-retry-test-actions/main.mdx
+++ b/frontend/tips/10-retry-test-actions/main.mdx
@@ -33,12 +33,11 @@ actions (rather than the whole test) that will back-off after a few attempts.
 If it finds what it needs, the tests passes. If it doesn't, the test fails -- and you know you have a legitimate
 problem on your hands.
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"10-retry-test-actions"} languages={contentLanguages} />
+<DisplayTips contentPath={"10-retry-test-actions"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
