--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -43,12 +43,11 @@ This will enable us to continue through specific Selenium actions and locators t
 putting them into test code.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={contentLanguages} />
+<DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
