--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -51,16 +51,15 @@ Let's start with an example for each approach with a popular A/B testing platfor
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
