--- a/frontend/tips/13-how-to-access-basic-auth/main.mdx
+++ b/frontend/tips/13-how-to-access-basic-auth/main.mdx
@@ -39,16 +39,15 @@ By specifying the username and password _in the URL_ when visiting a page with S
 level dialog box and avoid setting up a proxy server. This approach will work for both HTTP or HTTPS pages.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
