--- a/frontend/tips/26-cloud/main.mdx
+++ b/frontend/tips/26-cloud/main.mdx
@@ -52,11 +52,10 @@ Here is an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"26-cloud"} languages={contentLanguages} />
+<DisplayTips contentPath={"26-cloud"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
