--- a/frontend/tips/45-how-to-test-checkboxes/main.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/main.mdx
@@ -36,16 +36,15 @@ an attribute lookup), or by asking an element if it has been _selected_.
 We're going to go through each of these approaches to see their pros and cons.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"45-how-to-test-checkboxes"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"45-how-to-test-checkboxes"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
