--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -36,12 +36,11 @@ Let's dig in with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"49-performance-testing"} languages={contentLanguages} />
+<DisplayTips contentPath={"49-performance-testing"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
