--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -38,16 +38,15 @@ Built into Selenium is the ability to switch to an alert window and either accep
 tests can continue unencumbered by dialog boxes that may feel just out of reach.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={contentLanguages} />
+]} />
 
 
 ## About The Author
