--- a/frontend/tips/64-limit-bandwidth/main.mdx
+++ b/frontend/tips/64-limit-bandwidth/main.mdx
@@ -48,12 +48,11 @@ Let's continue with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"64-limit-bandwidth"} languages={contentLanguages} />
+<DisplayTips contentPath={"64-limit-bandwidth"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
