--- a/frontend/tips/65-highlight-elements/main.mdx
+++ b/frontend/tips/65-highlight-elements/main.mdx
@@ -38,15 +38,14 @@ Let's take a look at an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"65-highlight-elements"} languages={[
     { label: 'Python', value: 'python' },
     { label: 'C#', value: 'csharp' },
     { label: 'Java', value: 'java' },
     { label: 'JavaScript', value: 'javascript' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"65-highlight-elements"} languages={contentLanguages} />
+]} />
 
 
