--- a/frontend/tips/66-blacklist/main.mdx
+++ b/frontend/tips/66-blacklist/main.mdx
@@ -35,12 +35,11 @@ to a blacklist.
 Let's continue with an example.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"66-blacklist"} languages={contentLanguages} />
+<DisplayTips contentPath={"66-blacklist"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
