--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -42,12 +42,11 @@ Lets look at an example of each.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"67-broken-images"} languages={contentLanguages} />
+<DisplayTips contentPath={"67-broken-images"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
