--- a/frontend/tips/68-load-testing-revisited/main.mdx
+++ b/frontend/tips/68-load-testing-revisited/main.mdx
@@ -40,12 +40,11 @@ Let's dig in with an example.
 
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"68-load-testing-revisited"} languages={contentLanguages} />
+<DisplayTips contentPath={"68-load-testing-revisited"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
 ## About The Author
