--- a/frontend/tips/72-headless-chrome/main.mdx
+++ b/frontend/tips/72-headless-chrome/main.mdx
@@ -35,11 +35,10 @@ Enter Headless Chrome ([link](https://chromium.googlesource.com/chromium/src/+/l
 Starting with Chrome 59 (Chrome 60 for Windows) we can pass Chrome a few configuration options to enable headless mode.
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
-    { label: 'Ruby', value: 'ruby' },
-];
+import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"72-headless-chrome"} languages={contentLanguages} />
+<DisplayTips contentPath={"72-headless-chrome"} languages={[
+    { label: 'Ruby', value: 'ruby' },
+]} />
 
 
