--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -42,12 +42,11 @@ With the release of Selenium 4 comes the `newWindow` command which allows you to
 ##### _Click on any of the code snippets in the table for more information and script demos._
 
 
-import DisplayTips from "../../src/components/displayTips";
-const contentLanguages = [
+import DisplayTips from '@site/src/components/displayTips';
+
+<DisplayTips contentPath={"63-right-click"} languages={[
     { label: 'Java', value: 'java' },
     { label: 'Ruby', value: 'ruby' },
-];
-
-<DisplayTips contentPath={"63-right-click"} languages={contentLanguages} />
+]} />
 
 
