Adding slug to tip 1, shortening url

--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -1,15 +1,14 @@
 ---
 title: 'How To Upload A File'
 id: '1-upload-a-file'
-contentUrl: 'tips/how-to-upload-a-file/1-upload-a-file'
+slug: /1-upload-a-file
+contentUrl: 'tips/1-upload-a-file'
 sidebar_label: How To Upload A File
 text: 'Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted with a dialog box that is just out of reach for Selenium. In these cases people often look to a third-party tool to manipulate this window.'
 hide_table_of_contents: true
 level: 1
 number: 1
 publish_date: 2015-07-19
-last_update:
-  date: 2023-02-27
 tags:
   - 'file'
   - 'upload'
@@ -41,13 +40,13 @@ Let's step through an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+<DisplayTips contentPath={"1-upload-a-file"} languages={[
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
