Adding slug to tip 2, shortening url

--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How To Download a File'
 id: '2-download-a-file'
+slug: /2-download-a-file
 contentUrl: "tips/download-a-file/2-download-a-file"
 sidebar_label: How To Download a File
 text: "Just like with uploading files we hit the same issue with downloading them a dialog box just out of Selenium's reach. With some additional configuration, we can side-step the dialog box."
@@ -8,8 +9,6 @@ number: 2
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-27
-last_update:
-  date: 2023-03-08
 tags:
   - 'files'
   - 'downloading'
@@ -39,12 +38,12 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"2-download-a-file"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
