Adding slug to tip 3, shortening url

--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Work With Frames'
 id: '3-work-with-frames'
+slug: /3-work-with-frames
 contentUrl: "tips/work-with-frames/3-work-with-frames"
 sidebar_label: Work With Frames
 text: "In this tip, you'll learn how to work with frames and write tests against them. On occasion, we may encounter relics of the front-end world, such as frames."
@@ -8,8 +9,6 @@ number: 3
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-08-25
-last_update:
-  date: 2023-02-22
 tags:
   - 'frames'
 category:
@@ -35,12 +34,12 @@ Let's explore further with some examples.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"3-work-with-frames"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
