Adding slug to tip 4, shortening url

--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Work With Multiple Windows'
 id: '4-work-with-multiple-windows'
+slug: /4-work-with-multiple-windows
 contentUrl: "tips/work-with-multiple-windows/4-work-with-multiple-windows"
 sidebar_label: Work With Multiple Windows
 text: "This tip will explain how to work with multiple windows in Selenium and switch between them. Occasionally you'll run into a link or action in the application you're testing that will open a new window."
@@ -8,8 +9,6 @@ number: 4
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-08-21
-last_update:
-  date: 2023-02-27
 tags:
   - 'windows'
   - 'multiple windows'
@@ -36,12 +35,12 @@ Let's step through a couple of examples to demonstrate.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"4-work-with-multiple-windows"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
