--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Select From A Dropdown'
 id: '5-select-from-a-dropdown'
+slug: /5-select-from-a-dropdown
 contentUrl: "tips/select-from-a-dropdown/5-select-from-a-dropdown"
 sidebar_label: Select From A Dropdown
 text: "Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown menu while online shopping, or selecting your method of payment. And, while selecting from a dropdown list might seem straightforward just grab the list by its element and select an item within it, based on the text you want there's a bit more skill to it."
@@ -8,8 +9,6 @@ number: 5
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-07-06
-last_update:
-  date: 2023-02-22
 tags:
   - 'dropdown'
   - 'forms'
@@ -31,12 +30,12 @@ Let's take a look at a couple of different approaches.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"5-select-from-a-dropdown"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
