Adding slug to tip 7, shortening url

--- a/frontend/tips/7-use-a-page-object/main.mdx
+++ b/frontend/tips/7-use-a-page-object/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Use A Page Object'
 id: '7-use-a-page-object'
+slug: /7-use-a-page-object
 contentUrl: "tips/use-a-page-object/7-use-a-page-object"
 sidebar_label: Use A Page Object
 text: "One of the biggest challenges with Selenium tests is that they can be brittle and challenging to maintain over time.
@@ -9,8 +10,6 @@ number: 7
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-07-09
-last_update:
-  date: 2023-03-08
 tags:
   - 'page object'
   - 'abstraction'
@@ -42,8 +41,8 @@ And with this approach, we not only get the benefit of controlled chaos, we also
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"7-use-a-page-object"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
