Adding slug to tip 8, shortening url

--- a/frontend/tips/8-download-a-file-revisited/main.mdx
+++ b/frontend/tips/8-download-a-file-revisited/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Download A File Revisited'
 id: '8-download-a-file-revisited'
+slug: /8-download-a-file-revisited
 contentUrl: 'tips/download-a-file-revisited/8-download-a-file-revisited'
 sidebar_label: Download A File Revisited
 text: 'In a previous tip we went through how to download files with Selenium by configuring the browser to download them locally and verifying their file size when done. While the previous method works, it requires a custom configuration that is inconsistent from browser to browser.'
@@ -8,8 +9,6 @@ number: 8
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-08-20
-last_update:
-  date: 03-08-2023
 tags:
   - 'files'
   - 'downloading'
@@ -45,11 +44,11 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"8-download-a-file-revisited"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
