Adding slug to tip 9, shortening url

--- a/frontend/tips/9-use-a-base-page-object/main.mdx
+++ b/frontend/tips/9-use-a-base-page-object/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Use A Base Page Object'
 id: '9-use-a-base-page-object'
+slug: /9-use-a-base-page-object
 contentUrl: "tips/use-a-base-page-object/9-use-a-base-page-object"
 sidebar_label: Use A Base Page Object
 text: "In a previous tip, we went through creating a simple Page Object to capture the behavior of a page we were interacting with. While this was a good start, it leaves a lot of room for improvement. One of the biggest issues is that there are common actions we will likely need across multiple Page Objects and, with our current approach, we would end up with duplicate code."
@@ -8,8 +9,6 @@ number: 9
 hide_table_of_contents: true
 level: 3
 publish_date: 2013-07-23
-last_update:
-  date: 2023-03-25
 tags:
   - 'page object'
   - 'abstraction'
@@ -40,8 +39,8 @@ leverage them in any Page Object we see fit.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"9-use-a-base-page-object"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
