--- a/frontend/tips/10-retry-test-actions/main.mdx
+++ b/frontend/tips/10-retry-test-actions/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Retry Test Actions'
 id: '10-retry-test-actions'
+slug: /10-retry-test-actions
 contentUrl: 'tips/retry-test-actions/10-retry-test-actions'
 sidebar_label: Retry Test Actions
 text: "We all write tests with the best intention of having them pass and, when they fail, to reveal legitimate issues in the application we're testing. But that's not always easy to accomplish. Especially when your application is dependent upon third-party service providers (e.g. payment providers, social networks, etc)."
@@ -8,8 +9,6 @@ number: 10
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-07-30
-last_update:
-  date: 2023-02-27
 tags:
   - 'reliability'
 category:
@@ -36,8 +35,8 @@ problem on your hands.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"10-retry-test-actions"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
