--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Build An Interactive Prompt'
 id: '11-build-an-interactive-prompt'
+slug: /11-build-an-interactive-prompt
 contentUrl: 'tips/build-an-interactive-prompt/11-build-an-interactive-prompt'
 sidebar_label: Build An Interactive Prompt
 text: 'Working with Selenium straight in code has its advantages. However, if you run into a complicated scenario to automate, it becomes challenging to work through it to completion.'
@@ -8,8 +9,6 @@ number: 11
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-08-06
-last_update:
-  date: 2023-02-28
 tags:
   - 'repl'
   - 'debugging'
@@ -46,8 +45,8 @@ putting them into test code.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
