Adding slug to tip 12, shortening url

--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Opt Out of AB Tests'
 id: '12-opt-out-of-ab-tests'
+slug: /12-opt-out-of-ab-tests
 contentUrl: 'tips/opt-out-of-ab-tests/12-opt-out-of-ab-tests'
 sidebar_label: Opt Out of AB Tests
 text: "Occasionally when running tests you may see unexpected behavior due to A/B testing of the application you're working with. In order to keep your tests running without issue we need a clean way to opt-out of these split tests."
@@ -8,8 +9,6 @@ number: 12
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-10-15
-last_update:
-  date: 2023-02-28
 tags:
   - 'ab tests'
   - 'optimizely'
@@ -31,18 +30,16 @@ of these split tests.
 First, here is a primer on Split Testing.
 
 > ### Split Testing
->
+
 > Split testing is a simple way to experiment with an application's features to see which changes lead to higher user
 > engagement. A simple example would be testing variations of an e-mail landing page to see if more people sign up.
 > In such a split test there would be the control (how the application looks and behaves now) and variants (e.g., 2
 > or 3 changes that could include changing text or images on the page, element positioning, color of the submit
-> button, etc).
->
-> Once the variants are configured, they are put into rotation, and the experiment starts. During this experiment
-> each user will see a different version of the feature and their engagement with it will be tracked. Split tests
-> live for the length of the experiment or until a winner is found (e.g., tracking indicates that a variant converted
-> higher than the control). If no winner is found, new variants may be created and another experiment tried. If a
-> winner is found, then the winning variant becomes the new control and the feature gets updated accordingly.
+> button, etc). Once the variants are configured, they are put into rotation, and the experiment starts. During this
+> experiment each user will see a different version of the feature and their engagement with it will be tracked. Split
+> tests live for the length of the experiment or until a winner is found (e.g., tracking indicates that a variant
+> converted higher than the control). If no winner is found, new variants may be created and another experiment tried.
+> If a winner is found, then the winning variant becomes the new control and the feature gets updated accordingly.
 
 Thankfully there are some standard opt-out mechanisms built into A/B testing platforms. They tend to come in the
 form of an appended URL or forging a cookie.
@@ -54,12 +51,12 @@ Let's start with an example for each approach with a popular A/B testing platfor
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
