Adding slug to tip 13, shortening url

--- a/frontend/tips/13-how-to-access-basic-auth/main.mdx
+++ b/frontend/tips/13-how-to-access-basic-auth/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Work With Basic Auth'
 id: '13-work-with-basic-auth'
+slug: /13-work-with-basic-auth
 contentUrl: "tips/how-to-access-basic-auth/13-work-with-basic-auth"
 sidebar_label: Work With Basic Auth
 text: "Sometimes you'll work with applications that are secured behind Basic HTTP Authentication. In order to access them you'll need to pass credentials to the site when requesting a page otherwise you'll get a system level pop-up prompting you for a username and password rendering Selenium helpless."
@@ -8,8 +9,6 @@ number: 13
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-10-14
-last_update:
-  date: 2023-02-22
 tags:
   - 'authentication'
 category:
@@ -42,12 +41,12 @@ level dialog box and avoid setting up a proxy server. This approach will work fo
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
