Adding slug to tip 14, shortening url

--- a/frontend/tips/14-interactive-prompts-revisited/main.mdx
+++ b/frontend/tips/14-interactive-prompts-revisited/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'Interactive Prompts Revisited'
 id: '14-interactive-prompts-revisited'
+slug: /14-interactive-prompts-revisited
 contentUrl: "tips/interactive-prompts-revisited/14-interactive-prompts-revisited"
 sidebar_label: "Interactive Prompts Revisited"
 text: "In a previous tip we covered how a REPL can help you determine what code to write in your scripts by testing locators and actions through an interactive prompt. This is great for simple tasks, but its starts to falter when debugging more complex scripts."
 hide_table_of_contents: true
 number: 14
 publish_date: 2013-08-27
-last_update:
-    date: 2023-04-06
 tags:
   - 'repl'
   - 'pry'
@@ -41,5 +40,5 @@ solve the error you are experiencing.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"14-interactive-prompts-revisited"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
