--- a/frontend/tips/15-download-secure-files/main.mdx
+++ b/frontend/tips/15-download-secure-files/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Download Secure Files'
 id: '15-download-secure-files'
+slug: /15-download-secure-files
 contentUrl: "tips/download-secure-files/15-download-secure-files"
 sidebar_label: Download Secure Files
 text: "Previously, we've gone over how to test file downloads without a browser by leveraging Selenium Webdriver and an HTTP library in tandem. This approach is great for testing general file downloads, but what if the file you want to download is behind authentication?"
@@ -8,14 +9,12 @@ number: 15
 hide_table_of_contents: true
 level: 3
 publish_date: 2015-08-20
-last_update:
-  date: 2023-03-27
 tags:
   - 'files'
   - 'downloading'
   - 'authentication'
 category:
-    'fundamentals'
+  - 'fundamentals'
 ---
 
 # How to Download Secure Files
@@ -38,8 +37,8 @@ Let's continue with some examples.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"15-download-secure-files"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
